--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,43 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  width: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.AddTaskForm {
+  position: fixed;
+  top: 30px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.AddTaskForm input {
+  margin-right: 30px;
+  width: 500px;
+  padding: 10px 20px;
+  border-radius: 8px;
 }
 
-.card {
-  padding: 2em;
+.Task {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin: 30px 0;
+  border: 1px solid white;
+  border-radius: 8px;
+  padding: 10px 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.deleteBtn {
+  background: white;
+  color: black;
 }
